k8s/5swagger/37-deployment-swagger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger
  namespace: hobb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swagger
  template:
    metadata:
      labels:
        app: swagger
    spec:
      containers:
      - name: swagger
        image: registry.io.bb.com.br:3389/hobb/swagger:0.0.1
        ports:
        - containerPort: 8080
