k8s/5swagger/47-ingress-interno-swagger.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hobb-api
  name: swagger-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: swagger.hobb.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: swagger-service
          servicePort: 80
  tls:
  - secretName: hobb-io-tls
    hosts:
    - swagger.hobb.io.bb.com.br
